Eliminate a total of 7 security issues (3 high severity + 2 medium + 4 low).
WIP

Investigate dataset file name parsing error on windows build

Match sdist files with source control files

Just do two p35 tox-env tests

Exit with 1 if despite locating the xxx-split.txt files parsing failes

Add 'readline' package in 'requirements.txt' file and in the 'install_requires' parameter of the setup method, to try overcome error caused by the 'import readline' statement in the 'create-album.py' script when importing its main method from 'test_create_album_program' module in Windows build

Try the 'usedevelop = true' setting to try avoid python interpreters tox-appveyor mismatch error on Windows build

Pip install pyreadline in Windows worker to try overcome the 'python setup.py egg_info' failing on Windows build

Remove readline from install_requires and requirements.txt

Add readline in requirements.txt

Remove readline from install_requires and requirements.txt

Assure tox gets the minimum version of virtualenv available as dependency

Try and upgrade pip after during bootstrap of appveyor

Try the pyreadline.Readline() to emulate the realine interface for Windows build

Overrider the standard readline with the pyreadline.Realine() only after checking if on an 'nt' (windows) machine in the 'create-album' script

Install ffmpeg in appveyor worker

Develop isntall-ffmpeg.ps1

Develop isntall-ffmpeg.ps1 1

Dump install-ffmpeg code in appveyor.yml

Install ffmpeg from npm

Another isntallation trial

WIP

Another isntallation trial 1

Save test download youtube video file to a 'pytest' temp dir in unittests

Rename test data string

Remove ci/install-ffmpeg.ps1

WIP

WIP

WIP

WIP

WIP

WIP

WIP

WIP

Remove py36 and py37 tox environments from pipeline

Multiple p25 builds

Do not install ffmpeg in 'clean'

WIP'

WIP'

WIP'

WIP'

WIP'

WIP'

WIP'

Adopt fine grained py and py-cover tox environments

Exclude .coverage from distribution. Run tox -e with envlist to try avoid th

--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -17,6 +17,8 @@ include .travis.yml
 include .scrutinizer.yml
 include appveyor.yml
 
+include .bandit.yml
+
 include .coveragerc
 include tox.ini
 
