--- a/tox.ini
+++ b/tox.ini
@@ -45,16 +45,6 @@ deps =
 commands =
     {posargs:pytest -vv --ignore=src}
 
-[testenv:gg]
-basepython = {env:TOXPYTHON:python3.5}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
 
 [testenv:bootstrap]
 deps =
@@ -80,6 +70,7 @@ skip_install = true
 commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
+
 
 # This env can be potentially allowed to fail
 [testenv:quality]
@@ -208,6 +199,17 @@ deps =
     {[testenv]deps}
     pytest-cov
 
+
+[testenv:py35-offline]
+basepython = {env:TOXPYTHON:python3.5}
+setenv =
+    {[testenv]setenv}
+usedevelop = true
+commands =
+    {posargs:pytest --cov --cov-report=term-missing -vv -k 'not test_downloading'}
+deps =
+    {[testenv]deps}
+    pytest-cov
 
 
 [testenv:py35-nocov]
