feat(python2.7-support): support python2.7
Update 2 version strings

Encapsulate all input/out dialogs to user in a class. Use logging infrastructure. Enable Appveyor CI builds for combinations of python 3.6 and 3.7 and architectures 32 (x86) and 64 (x64). Render app logo through native python code.

Put all 'backend' messages to loggers

Render loging.info message from downloading when running create-album

Achieve logging INFO of download module in 2 console handlers: one configured locally and one cofigured globally through logging.ini

Fix quality errors except for E122 caused by the print(logo) syntax for visual clarity

Enable Appveyor CI builds for combinations of python 3.6 and 3.7 and architectures 32 (x86) and 64 (x64)

Fix E122 quality warning

Refactor dialogs.py

Force setuptools>=40.0.0 environment dependency

Implement Youtube video title parser from html

WIP

WIP

WIP

Point README directives to 'video-title' branch

Improve README

Use attr in FormatClassifier

WIP

WIP

WIP

WIP

Write integration test.

Point to branch 'integration-test' in README

Import Mock correctly

Add environment variable in appveyor build

Fix 'video_title' unittest

WIP

WIP

Write integration-test

Correct integration test

Enable only integration test

WIP

WIP

WIP

WIP

WIP

WIP

Flash stdout and stderr

WIP

Write integration-test

WIP

Enable all tests

Add mock in requirements.txt

Fix windows build

Sort import statements

WIP

Cross-platform temp storing of files

Update README

Exclude integration and downloading tests from running on Scrutinizer.ci, because the serve lacks a certificate to verify when youtube-dl executes

Fix a potential security erro rwith hardcoded temp path

Apply security fix

Update CHANGELOG. Update README to point to master.

ci(.travis.yml): remove duplicate job from running in Travis

ci(.travis.yml): specify PYPI_USERNAME in build environment of travis-ci

ci(setup.cfg): add 'semantic_release' section in setup.cfg

Make an initial co

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,10 +3,16 @@ language: python
 
 env:
   global:
-    - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
-    - SEGFAULT_SIGNALS=all
-    - TOX_SKIP_MISSING_INTERPRETERS="False"
-    - MUSIC_LIB_ROOT=music-lib
+  - LD_PRELOAD=/lib/x86_64-linux-gnu/libSegFault.so
+  - SEGFAULT_SIGNALS=all
+  - TOX_SKIP_MISSING_INTERPRETERS="False"
+  - PYPI_USERNAME=boromir674
+  - MUSIC_LIB_ROOT=music-lib
+  - TRAVIS=true
+# in case you want to use semantic-release from travis specify two
+# 'secure' items; one for PYPI_USERNAME and one for PYPI_PASSWORD
+
+
 addons:
   apt:
     update: true
@@ -14,30 +20,29 @@ addons:
     - ffmpeg
 
 before_install:
-  - uname -a
-  - lsb_release -a
-  - python --version
-  - python -m pip install -U pip
-  - pip --version
-  - python -m pip install tox
-  - tox --version
-  - virtualenv --version
-  - easy_install --version
-  - ffmpeg -version
+- uname -a
+- lsb_release -a
+- python --version
+- python -m pip install -U pip
+- pip --version
+- python -m pip install tox
+- tox --version
+- virtualenv --version
+- easy_install --version
+- ffmpeg -version
 
-#install:
 cache: pip
 script: tox -v
-
 
 jobs:
   fail_fast: true
   include:
-#  - stage: Check
   - stage: run tests
     env: TOXENV=clean,check
   - stage: run tests
-    python: '3.6'
+    python: '2.7'
+    env: TOXENV=py27-cover,codecov
+  - stage: run tests
     env: TOXENV=quality
   - stage: run tests
     python: '3.5'
@@ -48,25 +53,24 @@ jobs:
   - stage: run tests
     python: '3.7'
     env: TOXENV=py37-cover,codecov
-  - stage: run tests
-    python: '3.7'
-    env: TOXENV=py37-build,codecov
   allow_failures:
-    - env: TOXENV=quality
+  - env: TOXENV=quality
 
 after_failure:
-  - more .tox/log/* | cat
-  - more .tox/*/log/* | cat
-
-#
-#deploy:
-#  provider: script
-#  script: .travis/deploy.sh
-#  on:
-#    all_branches: true
+- more .tox/log/* | cat
+- more .tox/*/log/* | cat
 
 
-#notifications:
-#  email:
-#    on_success: never
-#    on_failure: never
+#- stage: semantic release
+#    if: branch = master AND type != pull_request
+#    before_install: skip
+#    install:
+#      - python -m pip install -U pip
+#      - pip install typing
+#      - pip install python-semantic-release
+#    script:
+#      - git config --global user.name "semantic-release (via TravisCI)"
+#      - git config --global user.email "semantic-release@travis"
+#      - semantic-release publish
+#    after_script: skip # optional, skip if you have a global after_script
+#    after_success: skip # optional, skip if you have a global after_success
