--- a/setup.cfg
+++ b/setup.cfg
@@ -29,3 +29,9 @@ environment_variables =
 
 [easy_install]
 
+
+[semantic_release]
+version_variable = src/music_album_creation/__init__.py:__version__
+version_source = tag
+hvcs = github
+upload_to_pypi=false
