--- a/tox.ini
+++ b/tox.ini
@@ -49,6 +49,10 @@ commands =
 
 #######################################################################
 
+
+[testenv:py27-cover]
+basepython = {env:TOXPYTHON:python2.7}
+usedevelop = true
 [testenv:py35-cover]
 basepython = {env:TOXPYTHON:python3.5}
 usedevelop = true
@@ -85,11 +89,11 @@ deps =
     pygments
     docutils
     readme-renderer
-;    isort
+    isort
 skip_install = true
 commands =
     flake8 src tests setup.py
-    ;    isort --verbose --check-only --diff --recursive src tests setup.py
+    isort --verbose --check-only --diff --recursive src tests setup.py
 
 [flake8]
 # select the type of style errors to check
