Write integration test. Implement fallback album video title web parser. Improve security.
Update 2 version strings

Encapsulate all input/out dialogs to user in a class. Use logging infrastructure. Enable Appveyor CI builds for combinations of python 3.6 and 3.7 and architectures 32 (x86) and 64 (x64). Render app logo through native python code.

Put all 'backend' messages to loggers

Render loging.info message from downloading when running create-album

Achieve logging INFO of download module in 2 console handlers: one configured locally and one cofigured globally through logging.ini

Fix quality errors except for E122 caused by the print(logo) syntax for visual clarity

Enable Appveyor CI builds for combinations of python 3.6 and 3.7 and architectures 32 (x86) and 64 (x64)

Fix E122 quality warning

Refactor dialogs.py

Force setuptools>=40.0.0 environment dependency

Implement Youtube video title parser from html

WIP

WIP

WIP

Point README directives to 'video-title' branch

Improve README

Use attr in FormatClassifier

WIP

WIP

WIP

WIP

Write integration test.

Point to branch 'integration-test' in README

Import Mock correctly

Add environment variable in appveyor build

Fix 'video_title' unittest

WIP

WIP

Write integration-test

Correct integration test

Enable only integration test

WIP

WIP

WIP

WIP

WIP

WIP

Flash stdout and stderr

WIP

Write integration-test

WIP

Enable all tests

Add mock in requirements.txt

Fix windows build

Sort import statements

WIP

Cross-platform temp storing of files

Update README

Exclude integration and downloading tests from running on Scrutinizer.ci, because the serve lacks a certificate to verify when youtube-dl executes

Fix a potential security erro rwith hardcoded temp path

Apply security fix

Update CHANGELOG. Update README to point to master.

Increment version to 1.2.0 in setup.py. Remove duplicate code.

Update 2 version strings

Encapsulate all input/out dialogs to user in a class. Use logging infrastruc

--- a/.scrutinizer.yml
+++ b/.scrutinizer.yml
@@ -22,7 +22,7 @@ build:
                 before:
                     - pip install coverage
                 override:
-                    - tox
+                    - tox -e clean,check,scrutinizer
                     -
                         command: coverage
                         coverage:
