--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,12 @@
 [tox]
-envlist =
-    clean,
-    check,
-    quality,
-;    docs,
-;    py27-cover,
-;    py27-nocov,
-;    py34-cover,
-;    py34-nocov,
-    py35-cover,
-;    py35-nocov,
-    py36-cover,
-;    py36-nocov,
-    py37-cover,
-;    py37-nocov,
-;    pypy-cover,
-;    pypy-nocov,
-;    pypy3-cover,
-;    pypy3-nocov,
-    report
-
+envlist = clean,check,py35-cover,quality,codecov,
+;active
+;offline
+;splitters
+;integration
 skip_missing_interpreters = {env:TOX_SKIP_MISSING_INTERPRETERS:True}
-
 passenv = TOXENV CI TRAVIS TRAVIS_* CODECOV_*
+
 [testenv]
 basepython =
     {docs,spell}: {env:TOXPYTHON:python3.6}
@@ -34,32 +18,24 @@ setenv =
     VIRTUALENV_NO_DOWNLOAD=1
 passenv =
     *
-
     # See https://github.com/codecov/codecov-python/blob/5b9d539a6a09bc84501b381b563956295478651a/README.md#using-tox
     codecov: TOXENV
     codecov: CI
     codecov: TRAVIS TRAVIS_*
 deps =
     pytest
-;    pytest-travis-fold
+    pytest-cov
+    setuptools >= 40.0.0
+    -rrequirements.txt
 commands =
-    {posargs:pytest -vv --ignore=src}
-
-
-[testenv:bootstrap]
-deps =
-    jinja2
-    matrix
-skip_install = true
-commands =
-    python ci/bootstrap.py
+    {posargs:pytest --cov --cov-report=term-missing -vv}
+;    {posargs:pytest -vv --ignore=src}
 
 [testenv:clean]
-commands = coverage erase
-skip_install = true
 deps = coverage
+skip_install = true
+commands = coverage erase
 
-# This env must succeed in order to be meaningful to proceed running the rest of the environments
 [testenv:check]
 deps =
     docutils
@@ -71,8 +47,38 @@ commands =
     python setup.py check --strict --metadata --restructuredtext
     check-manifest {toxinidir}
 
+#######################################################################
 
-# This env can be potentially allowed to fail
+[testenv:py35-cover]
+basepython = {env:TOXPYTHON:python3.5}
+usedevelop = true
+[testenv:py36-cover]
+basepython = {env:TOXPYTHON:python3.6}
+usedevelop = true
+[testenv:py37-cover]
+basepython = {env:TOXPYTHON:python3.7}
+usedevelop = true
+
+[testenv:py35-nocov]
+basepython = {env:TOXPYTHON:python3.5}
+[testenv:py36-nocov]
+basepython = {env:TOXPYTHON:python3.6}
+[testenv:py37-nocov]
+basepython = {env:TOXPYTHON:python3.7}
+
+[testenv:py37-build]
+basepython = {env:TOXPYTHON:python3.7}
+
+[testenv:codecov]
+deps = codecov
+skip_install = true
+commands =
+    coverage xml --ignore-errors
+    codecov []
+
+
+#####################################################################
+
 [testenv:quality]
 deps =
     flake8
@@ -136,6 +142,24 @@ ignore =
     E402
 
 
+[testenv:coveralls]
+# requires COVERALLS_REPO_TOKEN
+deps =
+    coveralls
+skip_install = true
+commands =
+    coveralls []
+
+
+[testenv:bootstrap]
+deps =
+    jinja2
+    matrix
+skip_install = true
+commands =
+    python ci/bootstrap.py
+
+
 [testenv:spell]
 setenv =
     SPELLCHECK=1
@@ -155,23 +179,6 @@ commands =
     sphinx-build {posargs:-E} -b html docs dist/docs
     sphinx-build -b linkcheck docs dist/docs
 
-[testenv:coveralls]
-# requires COVERALLS_REPO_TOKEN
-deps =
-    coveralls
-skip_install = true
-commands =
-    coveralls []
-;;    coverage run --source=music_album_creation setup.py test
-
-[testenv:codecov]
-deps =
-    codecov
-skip_install = true
-commands =
-    coverage xml --ignore-errors
-    codecov []
-
 [testenv:report]
 deps = coverage
 skip_install = true
@@ -179,78 +186,40 @@ commands =
     coverage report
     coverage html
 
-
-[testenv:py35-active]
+########################### DEV ###########################
+[testenv:active]
 basepython = {env:TOXPYTHON:python3.5}
+deps = -rrequirements.txt
 usedevelop = true
-commands =
-    create-album
+commands = create-album
 
-
-[testenv:py35-cover]
+[testenv:splitters]
 basepython = {env:TOXPYTHON:python3.5}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
+deps = 
+    pytest
     pytest-cov
-
-[testenv:py35-splitters]
-basepython = {env:TOXPYTHON:python3.5}
-setenv =
-    {[testenv]setenv}
 usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv -k test_splitters}
-deps =
-    {[testenv]deps}
-    pytest-cov
+commands = {posargs:pytest --cov --cov-report=term-missing -vv -k test_splitters}
 
-
-[testenv:py35-offline]
+[testenv:offline]
 basepython = {env:TOXPYTHON:python3.5}
-setenv =
-    {[testenv]setenv}
 usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv -k 'not test_downloading'}
-deps =
-    {[testenv]deps}
-    pytest-cov
+commands = {posargs:pytest --cov --cov-report=term-missing -vv -k 'not test_downloading'}
 
-
-[testenv:py35-nocov]
-basepython = {env:TOXPYTHON:python3.5}
-
-
-[testenv:py36-cover]
+[testenv:integration]
 basepython = {env:TOXPYTHON:python3.6}
-setenv =
-    {[testenv]setenv}
-usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
+deps = 
+    pytest
+    mock
+usedevelop = false
+commands = {posargs:pytest  -vv -k test_create_album_program}
+
+
+############## SCRUTINIZER CI ##############
+[testenv:scrutinizer]
+basepython = {env:TOXPYTHON:python3.7}
 deps =
     {[testenv]deps}
-    pytest-cov
-
-[testenv:py36-nocov]
-basepython = {env:TOXPYTHON:python3.6}
-
-
-[testenv:py37-cover]
-basepython = {env:TOXPYTHON:python3.7}
-setenv =
-    {[testenv]setenv}
+    mock
 usedevelop = true
-commands =
-    {posargs:pytest --cov --cov-report=term-missing -vv}
-deps =
-    {[testenv]deps}
-    pytest-cov
-
-[testenv:py37-nocov]
-basepython = {env:TOXPYTHON:python3.7}
+commands = {posargs:pytest --cov -vv -k 'not test_integration and not test_downloading'}
